[gd_scene load_steps=2 format=3 uid="uid://c7yje6mfuqx3l"]

[ext_resource type="Script" path="res://ui/hub/spawn_list_window.gd" id="1"]

[node name="SpawnListWindow" type="AcceptDialog"]
title = "Entrenar Criatura"
position = Vector2i(200, 150)
size = Vector2i(400, 350)
visible = true
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
text = "Selecciona la criatura que deseas invocar:"

[node name="CreatureList" type="ItemList" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 2

[node name="InvokeButton" type="Button" parent="VBox/ButtonsContainer"]
layout_mode = 2
text = "Invocar"
